--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,33 @@
-git+https://github.com/openai/whisper.git@v20230314#egg=whisper
-datasets>=2.6.1
+# git+https://github.com/openai/whisper.git@v20230314#egg=whisper
+git+https://github.com/openai/whisper.git@v20230314
+datasets==2.12.0
 transformers==4.29.2
-librosa
-evaluate>=0.3.0
-jiwer
-gradio
+librosa==0.10.1
+evaluate==0.4.1
+jiwer==3.0.3
+gradio==3.50.2
 ipykernel
 ipywidgets
-editdistance
+editdistance==0.6.2
+pydantic<2.0
+fsspec==2023.4.0
+black>=22.3.0
+rich==13.7.0
+torch==2.0.1
+pytorch-lightning==2.1.2
+truecase==0.0.14
+GitPython==3.1.40
+accelerate==0.25.0
+tensorboardX==2.6.2.2
+wandb==0.16.1
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
